<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufg.inf.inventorycontrolActivity.EditarActivity"
    tools:ignore="MergeRootFrame"
    android:padding="15dp"
    android:background="#fff0f0" >
    
      <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ffffff"
    >
    
    <TextView 
        android:id="@+id/lbEdiTarProduto"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:text="@string/editarProduto" 
        android:layout_marginLeft="50dp" 
        android:layout_marginBottom="30dp" 
        />
    
     <TextView 
     android:id="@+id/lbNome"
     android:layout_height="wrap_content" 
     android:layout_width="wrap_content" 
     android:text="@string/nome" 
        />
     
     <EditText 
         android:id="@+id/etNome"
         android:layout_height="wrap_content" 
         android:layout_width="fill_parent"
         android:inputType="text" 
         android:layout_marginBottom="30dp"
         android:maxLength="50"
         />
     
     <TextView 
     android:id="@+id/lbFabricante"
     android:layout_height="wrap_content" 
     android:layout_width="wrap_content" 
     android:text="@string/fabricante" 
     />
     
     <EditText 
         android:id="@+id/etFabricante"
         android:layout_height="wrap_content" 
         android:layout_width="fill_parent"
         android:inputType="text" 
         android:layout_marginBottom="30dp"
         android:maxLength="50"
         />
     
      <TextView 
         android:id="@+id/lbUnidadeDeMedida"
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:text="@string/unidadeDeMedida" 
         />
        
     <Spinner 
         android:layout_height="44dp" 
         android:layout_width="wrap_content" 
         android:id="@+id/spUnidadeDeMedida"
         android:layout_marginBottom="30dp"
         />
      
        <TextView 
         android:id="@+id/lbQuantidade"
         android:layout_height="wrap_content" 
         android:layout_width="wrap_content" 
         android:text="@string/quantidade" 
         />
        
         <EditText 
         android:id="@+id/etQuantidade"
         android:layout_height="wrap_content" 
         android:layout_width="fill_parent"
         android:inputType="numberDecimal" 
         android:layout_marginBottom="15dp"
         android:maxLength="50"
         />
         
         <Button
             android:id="@+id/btIncluir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="editar"
             android:text="@string/alterar" />
        
       </LinearLayout> 
     

</ScrollView>